# VocalOS-Be

./: .gitignore  README.md  config.json  continuous_recognition.py  custom_commands.py  custom_engine.py  main.py  main_test.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  triggered_recognition.py
backend/: .env  main.py  prompt.py  real_time_stt.py  stt.py  test.py
backend/Automations/web_browsing/: auth.json  auth_setup.py  playwright_service.py  web_browse.py
backend/voice_profiles/: default_user.pkl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: main.js  preload.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Typewriter.jsx
src/: capture.py  config.py  install_packages.py  realtime.py  stt.py  testgpu.py  vad.py  voice_verified_stt.py
voice_profiles/: avi.pkl
