[project]
name = "vocalos-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "mss>=10.1.0",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai-whisper>=20250625",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.5",
    "silero-vad>=6.2.0",
    "sounddevice>=0.5.3",
]
